fix: use String.format